# jax

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/jax/: Cargo.toml
crates/jax-probes/: Cargo.toml
crates/jax-probes/src/: lib.rs  timing.rs
crates/jax/src/: config.rs  error.rs  jax.rs  lib.rs  lifecycle.rs  registry.rs  report.rs
crates/jax/src/lifecycle/: layers.rs  mod.rs  scheduler.rs  start.rs  stop.rs
crates/jax/src/probe/: mod.rs
crates/jax/src/registry/: graph.rs  handle.rs  mod.rs
crates/jax/src/runtime/: jax.rs  mod.rs
crates/jax/src/shard/: descriptor.rs  id.rs  layer.rs  macros.rs  mod.rs  schedule.rs  traits.rs
crates/wasm/jax-wasm/: Cargo.toml
crates/wasm/jax-wasm-abi/: Cargo.toml
crates/wasm/jax-wasm-abi/src/: lib.rs
crates/wasm/jax-wasm-abi/wit/: jax-shard.wit
crates/wasm/jax-wasm-contract/: Cargo.toml
crates/wasm/jax-wasm-contract/src/: lib.rs
crates/wasm/jax-wasm-guest/: Cargo.toml
crates/wasm/jax-wasm-guest/src/: lib.rs
crates/wasm/jax-wasm-host/: Cargo.toml
crates/wasm/jax-wasm-host/src/: lib.rs
crates/wasm/jax-wasm-macros/: Cargo.toml
crates/wasm/jax-wasm-macros/src/: lib.rs
crates/wasm/jax-wasm/src/: lib.rs
examples/example-shards/: Cargo.toml
examples/example-shards/src/: lib.rs
examples/host-app/: Cargo.toml
examples/host-app/src/: main.rs
examples/wasm-shard/: README.md
examples/wasm-shard/guest-shard/: Cargo.toml
examples/wasm-shard/guest-shard/src/: lib.rs
examples/wasm-shard/host-app/: Cargo.toml
examples/wasm-shard/host-app/src/: main.rs
examples/wasm-shard/typed-shard/: Cargo.toml
examples/wasm-shard/typed-shard/src/: lib.rs
src/: config.rs  lib.rs  report.rs
src/shard/: dag.rs  info.rs  mod.rs  schedule.rs
