[workspace]
resolver = "3"
members = [
    "crates/jax",
    "crates/jax-probes",
    "crates/wasm/jax-wasm-abi",
    "crates/wasm/jax-wasm-guest",
    "crates/wasm/jax-wasm-host",
    "examples/wasm-shard/guest-shard",
    "examples/wasm-shard/host-app",
    "examples/wasm-shard/typed-shard",
]

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
jax = { path = "crates/jax" }
jax-wasm-abi = { path = "crates/wasm/jax-wasm-abi" }
jax-wasm-guest = { path = "crates/wasm/jax-wasm-guest" }
jax-wasm-host = { path = "crates/wasm/jax-wasm-host" }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
downcast-rs = { version = "2", default-features = false }
jsonschema = "0.46"
petgraph = { version = "0.8", default-features = false }
schemars = { version = "1", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
spin = { version = "0.10", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
wit-bindgen = "0.57.1"

[workspace.lints.clippy]
unwrap_used = "deny"
