[workspace]
resolver = "3"
members = [
    "crates/jax",
    "crates/jax-probes",
    "examples/example-shards",
    "examples/host-app",
]

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
jax = { path = "crates/jax" }
example-shards = { path = "examples/example-shards" }
host-app = { path = "examples/host-app" }

uuid = { version = "1", default-features = false, features = ["macro-diagnostics"] }
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
downcast-rs = { version = "2", default-features = false }
petgraph = { version = "0.8", default-features = false }
spin = { version = "0.10", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }

[workspace.lints.clippy]
unwrap_used = "deny"
