[package]
name = "jax-probes"
edition.workspace = true
version.workspace = true

[dependencies]
jax.workspace = true
uuid.workspace = true
async-trait.workspace = true
spin = { workspace = true, features = ["rwlock"] }

[features]
default = ["std"]
std = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
