[package]
name = "jax"
edition.workspace = true
version.workspace = true

[lib]
name = "jax"
crate-type = ["rlib"]

[dependencies]
petgraph = { version = "0.8.3", default-features = false, features = ["stable_graph"] }
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true
downcast-rs = { version = "2.0.2", default-features = false, features = ["sync"] }

[features]
setup-timing = []

[lints]
workspace = true
