[package]
name = "jax"
edition.workspace = true
version.workspace = true

[lib]
name = "jax"
crate-type = ["rlib"]

[dependencies]
petgraph = { workspace = true, features = ["stable_graph"] }
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true
downcast-rs = { workspace = true, features = ["sync"] }

[features]
setup-timing = []

[lints]
workspace = true
