[package]
name = "jax-wasm-guest"
edition.workspace = true
version.workspace = true

[lib]
name = "jax_wasm_guest"
crate-type = ["rlib"]

[dependencies]
jax-wasm-abi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[lints]
workspace = true
