[package]
name = "jax-wasm-host"
edition.workspace = true
version.workspace = true

[lib]
name = "jax_wasm_host"
crate-type = ["rlib"]

[dependencies]
async-trait.workspace = true
jax.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[lints]
workspace = true
