[package]
name = "example-wasm-shard"
edition = "2024"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
example-wasm-typed-shard = { path = "../typed-shard" }
jax-wasm.workspace = true
jax-wasm-guest.workspace = true
schemars.workspace = true
serde.workspace = true
tracing.workspace = true
