[package]
name = "example-wasm-host-app"
edition = "2024"
version = "0.1.0"

[dependencies]
example-wasm-typed-shard = { path = "../typed-shard" }
jax.workspace = true
jax-wasm-host.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
